# XrivateYapitaZlircle

./: LICENSE  README.md
xrivate-yapita-zlircle-backend/: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.infra.yml  readme.md
xrivate-yapita-zlircle-backend/apps/web/: package.json
xrivate-yapita-zlircle-backend/apps/web/src/app/: layout.tsx  page.tsx
xrivate-yapita-zlircle-backend/apps/web/src/lib/: api.ts
xrivate-yapita-zlircle-backend/infrastructure/kubernetes/base/: namespace.yaml  network-policies.yaml
xrivate-yapita-zlircle-backend/scripts/: setup-local.sh
xrivate-yapita-zlircle-backend/security/opa/policies/authz/: member_access.rego
xrivate-yapita-zlircle-backend/services/capital-raising/: go.mod
xrivate-yapita-zlircle-backend/services/capital-raising/cmd/server/: main.go
xrivate-yapita-zlircle-backend/services/capital-raising/internal/core/: matching.go
xrivate-yapita-zlircle-backend/services/capital-raising/internal/handlers/: routes.go
xrivate-yapita-zlircle-backend/services/vehicle-factory/: Cargo.toml  Dockerfile
xrivate-yapita-zlircle-backend/services/vehicle-factory/src/: main.rs
xrivate-yapita-zlircle-backend/services/vehicle-factory/src/domain/: vehicle.rs
xrivate-yapita-zlircle-backend/services/vehicle-factory/src/infrastructure/: db.rs
xrivate-yapita-zlircle-backend/services/vehicle-factory/src/interfaces/: handlers.rs
xrivate-yapita-zlircle-backend/shared/contracts/proto/: vehicle.proto
xrivate-yapita-zlircle-backend/xrivate-yapita-zlircle-backend/data/schemas/oltp/: 001_initial_schema.sql
